--- a/test (copy).ipynb
+++ b/test (copy).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "d504b1fa-80bd-4f28-a310-c654e81508e8",
    "metadata": {},
    "outputs": [
@@ -203,17 +203,208 @@
     "print(result_string)\n",
     "\n",
     "\n",
-    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "e2b2c368-954c-4ae9-b489-d82f5006a3a1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Compiling the model to AUTO ...\n",
+      "Setting OpenVINO CACHE_DIR to roberta-base-cola/model_cache\n",
+      "Compiling the encoder to AUTO ...\n",
+      "Compiling the decoder to AUTO ...\n",
+      "Compiling the decoder to AUTO ...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "79b792fcc9244b7da34e78357af58226",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "correcting text..:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input text: dear did my you friend it is know my friends that that is more i house go to bigger her see house in you than later england at sunday my house best ken gwon\n",
+      "\n",
+      "generated text: Do you know my friend that it is more important to go to her house in London than to go to my house in Beijing on a Sunday?\n",
+      "\n",
+      "compare text:  [-'dear did my you friend it is'][+'Do you'] know my friend[-'s'] that [-'tha'][+'i']t is more i[-' house go to bigger her see house in you than later england at sunday my house best ken gwon'][+'mportant to go to her house in London than to go to my house in Beijing on a Sunday?']\n"
+     ]
+    }
+   ],
+   "source": [
+    "## imoprt\n",
+    "from transformers import pipeline, AutoTokenizer\n",
+    "from optimum.intel.openvino import OVModelForSeq2SeqLM, OVModelForSequenceClassification\n",
+    "import re\n",
+    "import transformers\n",
+    "from tqdm.notebook import tqdm\n",
+    "\n",
+    "## Grammar Checker\n",
+    "grammar_checker_model_id = \"textattack/roberta-base-CoLA\"\n",
+    "grammar_checker_dir = Path(\"roberta-base-cola\")\n",
+    "grammar_checker_tokenizer = AutoTokenizer.from_pretrained(grammar_checker_model_id)\n",
+    "\n",
+    "\n",
+    "if grammar_checker_dir.exists():\n",
+    "    grammar_checker_model = OVModelForSequenceClassification.from_pretrained(grammar_checker_dir, device='AUTO')\n",
+    "else:\n",
+    "    grammar_checker_model = OVModelForSequenceClassification.from_pretrained(grammar_checker_model_id, export=True, device='AUTO')\n",
+    "    grammar_checker_model.save_pretrained(grammar_checker_dir)\n",
+    "\n",
+    "\n",
+    "input_text = \"They are moved by salar energy\"\n",
+    "grammar_checker_pipe = pipeline(\"text-classification\", model=grammar_checker_model, tokenizer=grammar_checker_tokenizer)\n",
+    "# result = grammar_checker_pipe(input_text)[0]\n",
+    "# example\n",
+    "# print(f\"input text: {input_text}\")\n",
+    "# print(f'predicted label: {\"contains_errors\" if result[\"label\"] == \"LABEL_1\" else \"no errors\"}')\n",
+    "# print(f'predicted score: {result[\"score\"] :.2}')\n",
+    "\n",
+    "\n",
+    "## Grammar Corrector\n",
+    "grammar_corrector_model_id = \"pszemraj/flan-t5-large-grammar-synthesis\"\n",
+    "grammar_corrector_dir = Path(\"flan-t5-large-grammar-synthesis\")\n",
+    "grammar_corrector_tokenizer = AutoTokenizer.from_pretrained(grammar_corrector_model_id)\n",
+    "\n",
+    "\n",
+    "if grammar_corrector_dir.exists():\n",
+    "    grammar_corrector_model = OVModelForSeq2SeqLM.from_pretrained(grammar_corrector_dir, device=device.value)\n",
+    "else:\n",
+    "    grammar_corrector_model = OVModelForSeq2SeqLM.from_pretrained(grammar_corrector_model_id, export=True, device=device.value)\n",
+    "    grammar_corrector_model.save_pretrained(grammar_corrector_dir)\n",
+    "grammar_corrector_pipe = pipeline(\"text2text-generation\", model=grammar_corrector_model, tokenizer=grammar_corrector_tokenizer)\n",
+    "# result = grammar_corrector_pipe(input_text)[0]\n",
+    "# example\n",
+    "# print(f\"input text:     {input_text}\") \n",
+    "# print(f'generated text: {result[\"generated_text\"]}') \n",
+    "\n",
+    "\n",
+    "## Prepare Demo Pipeline\n",
+    "def split_text(text: str) -> list:\n",
+    "    \"\"\"\n",
+    "    Split a string of text into a list of sentence batches.\n",
+    "\n",
+    "    Parameters:\n",
+    "    text (str): The text to be split into sentence batches.\n",
+    "\n",
+    "    Returns:\n",
+    "    list: A list of sentence batches. Each sentence batch is a list of sentences.\n",
+    "    \"\"\"\n",
+    "    # Split the text into sentences using regex\n",
+    "    sentences = re.split(r\"(?<=[^A-Z].[.?]) +(?=[A-Z])\", text)\n",
+    "\n",
+    "    # Initialize a list to store the sentence batches\n",
+    "    sentence_batches = []\n",
+    "\n",
+    "    # Initialize a temporary list to store the current batch of sentences\n",
+    "    temp_batch = []\n",
+    "\n",
+    "    # Iterate through the sentences\n",
+    "    for sentence in sentences:\n",
+    "        # Add the sentence to the temporary batch\n",
+    "        temp_batch.append(sentence)\n",
+    "\n",
+    "        # If the length of the temporary batch is between 2 and 3 sentences, or if it is the last batch, add it to the list of sentence batches\n",
+    "        if len(temp_batch) >= 2 and len(temp_batch) <= 3 or sentence == sentences[-1]:\n",
+    "            sentence_batches.append(temp_batch)\n",
+    "            temp_batch = []\n",
+    "\n",
+    "    return sentence_batches\n",
+    "\n",
+    "\n",
+    "def correct_text(text: str, checker: transformers.pipelines.Pipeline, corrector: transformers.pipelines.Pipeline, separator: str = \" \") -> str:\n",
+    "    \"\"\"\n",
+    "    Correct the grammar in a string of text using a text-classification and text-generation pipeline.\n",
+    "\n",
+    "    Parameters:\n",
+    "    text (str): The inpur text to be corrected.\n",
+    "    checker (transformers.pipelines.Pipeline): The text-classification pipeline to use for checking the grammar quality of the text.\n",
+    "    corrector (transformers.pipelines.Pipeline): The text-generation pipeline to use for correcting the text.\n",
+    "    separator (str, optional): The separator to use when joining the corrected text into a single string. Default is a space character.\n",
+    "\n",
+    "    Returns:\n",
+    "    str: The corrected text.\n",
+    "    \"\"\"\n",
+    "    # Split the text into sentence batches\n",
+    "    sentence_batches = split_text(text)\n",
+    "\n",
+    "    # Initialize a list to store the corrected text\n",
+    "    corrected_text = []\n",
+    "\n",
+    "    # Iterate through the sentence batches\n",
+    "    for batch in tqdm(\n",
+    "        sentence_batches, total=len(sentence_batches), desc=\"correcting text..\"\n",
+    "    ):\n",
+    "        # Join the sentences in the batch into a single string\n",
+    "        raw_text = \" \".join(batch)\n",
+    "\n",
+    "        # Check the grammar quality of the text using the text-classification pipeline\n",
+    "        results = checker(raw_text)\n",
+    "\n",
+    "        # Only correct the text if the results of the text-classification are not LABEL_1 or are LABEL_1 with a score below 0.9\n",
+    "        if results[0][\"label\"] != \"LABEL_1\" or (\n",
+    "            results[0][\"label\"] == \"LABEL_1\" and results[0][\"score\"] < 0.9\n",
+    "        ):\n",
+    "            # Correct the text using the text-generation pipeline\n",
+    "            corrected_batch = corrector(raw_text)\n",
+    "            corrected_text.append(corrected_batch[0][\"generated_text\"])\n",
+    "        else:\n",
+    "            corrected_text.append(raw_text)\n",
+    "\n",
+    "    # Join the corrected text into a single string\n",
+    "    corrected_text = separator.join(corrected_text)\n",
+    "    return corrected_text\n",
+    "\n",
+    "\n",
+    "#test_text = \"dear my friend. did you know that? it is my friends house in england. that is more bigger than my house. i go to her house at sunday. see you later. best, ken gwon\"\n",
+    "test_text = result_string\n",
+    "\n",
+    "corrected_text = correct_text(test_text, grammar_checker_pipe, grammar_corrector_pipe)\n",
+    "\n",
+    "print(f\"input text: {test_text}\\n\")\n",
+    "print(f'generated text: {corrected_text}')\n",
+    "\n",
+    "# 문자열 바뀐 부분 확인\n",
+    "# pip install diff_match_patch\n",
+    "from diff_match_patch import diff_match_patch\n",
+    "\n",
+    "before = test_text\n",
+    "after = corrected_text\n",
+    "temp = \"\" \n",
+    "\n",
+    "dmp = diff_match_patch()\n",
+    "diff = dmp.diff_main(before, after)\n",
+    "dmp.diff_cleanupSemantic(diff)\n",
+    "\n",
+    "for d in diff:\n",
+    "    if d[0] == 1:\n",
+    "        temp += (\"[+\\'\"+d[1]+\"\\']\")\n",
+    "    elif d[0] == 0:\n",
+    "        temp += (d[1])\n",
+    "    elif d[0] == -1:\n",
+    "        temp += (\"[-\\'\"+d[1]+\"\\']\")\n",
+    "\n",
+    "print()\n",
+    "print(\"compare text: \", temp)"
+   ]
   },
   {
    "cell_type": "code",
