--- a/test (copy).ipynb
+++ b/test (copy).ipynb
@@ -210,7 +210,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "e2b2c368-954c-4ae9-b489-d82f5006a3a1",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -222,20 +224,6 @@
       "Compiling the decoder to AUTO ...\n",
       "Compiling the decoder to AUTO ...\n"
      ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "79b792fcc9244b7da34e78357af58226",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "correcting text..:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     },
     {
      "name": "stdout",
@@ -250,18 +238,16 @@
     }
    ],
    "source": [
-    "## imoprt\n",
+    "## 모듈 임포트\n",
     "from transformers import pipeline, AutoTokenizer\n",
     "from optimum.intel.openvino import OVModelForSeq2SeqLM, OVModelForSequenceClassification\n",
     "import re\n",
     "import transformers\n",
-    "from tqdm.notebook import tqdm\n",
     "\n",
-    "## Grammar Checker\n",
+    "\n",
     "grammar_checker_model_id = \"textattack/roberta-base-CoLA\"\n",
     "grammar_checker_dir = Path(\"roberta-base-cola\")\n",
     "grammar_checker_tokenizer = AutoTokenizer.from_pretrained(grammar_checker_model_id)\n",
-    "\n",
     "\n",
     "if grammar_checker_dir.exists():\n",
     "    grammar_checker_model = OVModelForSequenceClassification.from_pretrained(grammar_checker_dir, device='AUTO')\n",
@@ -269,131 +255,98 @@
     "    grammar_checker_model = OVModelForSequenceClassification.from_pretrained(grammar_checker_model_id, export=True, device='AUTO')\n",
     "    grammar_checker_model.save_pretrained(grammar_checker_dir)\n",
     "\n",
-    "\n",
-    "input_text = \"They are moved by salar energy\"\n",
     "grammar_checker_pipe = pipeline(\"text-classification\", model=grammar_checker_model, tokenizer=grammar_checker_tokenizer)\n",
-    "# result = grammar_checker_pipe(input_text)[0]\n",
-    "# example\n",
-    "# print(f\"input text: {input_text}\")\n",
-    "# print(f'predicted label: {\"contains_errors\" if result[\"label\"] == \"LABEL_1\" else \"no errors\"}')\n",
-    "# print(f'predicted score: {result[\"score\"] :.2}')\n",
     "\n",
-    "\n",
-    "## Grammar Corrector\n",
     "grammar_corrector_model_id = \"pszemraj/flan-t5-large-grammar-synthesis\"\n",
     "grammar_corrector_dir = Path(\"flan-t5-large-grammar-synthesis\")\n",
     "grammar_corrector_tokenizer = AutoTokenizer.from_pretrained(grammar_corrector_model_id)\n",
     "\n",
-    "\n",
     "if grammar_corrector_dir.exists():\n",
-    "    grammar_corrector_model = OVModelForSeq2SeqLM.from_pretrained(grammar_corrector_dir, device=device.value)\n",
+    "    grammar_corrector_model = OVModelForSeq2SeqLM.from_pretrained(grammar_corrector_dir, device='AUTO')\n",
     "else:\n",
-    "    grammar_corrector_model = OVModelForSeq2SeqLM.from_pretrained(grammar_corrector_model_id, export=True, device=device.value)\n",
+    "    grammar_corrector_model = OVModelForSeq2SeqLM.from_pretrained(grammar_corrector_model_id, export=True, device='AUTO')\n",
     "    grammar_corrector_model.save_pretrained(grammar_corrector_dir)\n",
+    "    \n",
     "grammar_corrector_pipe = pipeline(\"text2text-generation\", model=grammar_corrector_model, tokenizer=grammar_corrector_tokenizer)\n",
-    "# result = grammar_corrector_pipe(input_text)[0]\n",
-    "# example\n",
-    "# print(f\"input text:     {input_text}\") \n",
-    "# print(f'generated text: {result[\"generated_text\"]}') \n",
     "\n",
     "\n",
-    "## Prepare Demo Pipeline\n",
+    "## 문자열 분할\n",
+    "# text: 문장 배치로 분할할 텍스트, list: 문장 배치 목록\n",
     "def split_text(text: str) -> list:\n",
-    "    \"\"\"\n",
-    "    Split a string of text into a list of sentence batches.\n",
-    "\n",
-    "    Parameters:\n",
-    "    text (str): The text to be split into sentence batches.\n",
-    "\n",
-    "    Returns:\n",
-    "    list: A list of sentence batches. Each sentence batch is a list of sentences.\n",
-    "    \"\"\"\n",
-    "    # Split the text into sentences using regex\n",
+    "   \n",
+    "    # 정규식을 사용하여 텍스트를 문장으로 분할\n",
     "    sentences = re.split(r\"(?<=[^A-Z].[.?]) +(?=[A-Z])\", text)\n",
-    "\n",
-    "    # Initialize a list to store the sentence batches\n",
+    "    # 문장 배치\n",
     "    sentence_batches = []\n",
-    "\n",
-    "    # Initialize a temporary list to store the current batch of sentences\n",
+    "    # 임시 문장 배치 저장\n",
     "    temp_batch = []\n",
     "\n",
-    "    # Iterate through the sentences\n",
     "    for sentence in sentences:\n",
-    "        # Add the sentence to the temporary batch\n",
+    "        # 임시 문장 배치 추가\n",
     "        temp_batch.append(sentence)\n",
     "\n",
-    "        # If the length of the temporary batch is between 2 and 3 sentences, or if it is the last batch, add it to the list of sentence batches\n",
+    "        # 임시 문장 2~3문장 사이 OR 마지막 배치인 경우\n",
     "        if len(temp_batch) >= 2 and len(temp_batch) <= 3 or sentence == sentences[-1]:\n",
+    "            # 문장 배치 추가\n",
     "            sentence_batches.append(temp_batch)\n",
     "            temp_batch = []\n",
     "\n",
     "    return sentence_batches\n",
     "\n",
     "\n",
+    "## 문자열 문법 수정\n",
+    "# text: 수정할 텍스트, checker: 텍스트의 문법 품질 확인 파이프라인, corrector: 텍스트 수정 파이프라인, separator: 수정된 텍스트를 단일 문자열로 결합할때 사용할 구분기호(기본값은 공백문자)\n",
     "def correct_text(text: str, checker: transformers.pipelines.Pipeline, corrector: transformers.pipelines.Pipeline, separator: str = \" \") -> str:\n",
-    "    \"\"\"\n",
-    "    Correct the grammar in a string of text using a text-classification and text-generation pipeline.\n",
-    "\n",
-    "    Parameters:\n",
-    "    text (str): The inpur text to be corrected.\n",
-    "    checker (transformers.pipelines.Pipeline): The text-classification pipeline to use for checking the grammar quality of the text.\n",
-    "    corrector (transformers.pipelines.Pipeline): The text-generation pipeline to use for correcting the text.\n",
-    "    separator (str, optional): The separator to use when joining the corrected text into a single string. Default is a space character.\n",
-    "\n",
-    "    Returns:\n",
-    "    str: The corrected text.\n",
-    "    \"\"\"\n",
-    "    # Split the text into sentence batches\n",
+    "    \n",
+    "    # 문장 배치로 분할된 텍스트\n",
     "    sentence_batches = split_text(text)\n",
-    "\n",
-    "    # Initialize a list to store the corrected text\n",
+    "    \n",
+    "    # 수정된 텍스트\n",
     "    corrected_text = []\n",
     "\n",
-    "    # Iterate through the sentence batches\n",
-    "    for batch in tqdm(\n",
-    "        sentence_batches, total=len(sentence_batches), desc=\"correcting text..\"\n",
-    "    ):\n",
-    "        # Join the sentences in the batch into a single string\n",
+    "    # 문장 반복 및 진행도 출력\n",
+    "    for batch in sentence_batches:\n",
+    "        # 배치 문장을 단일 문자열로 결합\n",
     "        raw_text = \" \".join(batch)\n",
     "\n",
-    "        # Check the grammar quality of the text using the text-classification pipeline\n",
+    "        # 텍스트 분류 파이프라인 사용 -> 텍스트 문법 품질 확인(label, score)\n",
     "        results = checker(raw_text)\n",
-    "\n",
-    "        # Only correct the text if the results of the text-classification are not LABEL_1 or are LABEL_1 with a score below 0.9\n",
+    "        \n",
+    "        # 텍스트 분류 결과가 LABEL_1이 아니거나 점수가 0.9 미만인 LABEL_1인 경우일때\n",
     "        if results[0][\"label\"] != \"LABEL_1\" or (\n",
     "            results[0][\"label\"] == \"LABEL_1\" and results[0][\"score\"] < 0.9\n",
     "        ):\n",
-    "            # Correct the text using the text-generation pipeline\n",
+    "            # 텍스트 생성 파이프라인 사용하여 텍스트 수정\n",
     "            corrected_batch = corrector(raw_text)\n",
     "            corrected_text.append(corrected_batch[0][\"generated_text\"])\n",
     "        else:\n",
     "            corrected_text.append(raw_text)\n",
     "\n",
-    "    # Join the corrected text into a single string\n",
+    "    # 수정된 텍스트를 단일 문자열로 결합\n",
     "    corrected_text = separator.join(corrected_text)\n",
     "    return corrected_text\n",
     "\n",
-    "\n",
-    "#test_text = \"dear my friend. did you know that? it is my friends house in england. that is more bigger than my house. i go to her house at sunday. see you later. best, ken gwon\"\n",
-    "test_text = result_string\n",
-    "\n",
-    "corrected_text = correct_text(test_text, grammar_checker_pipe, grammar_corrector_pipe)\n",
-    "\n",
-    "print(f\"input text: {test_text}\\n\")\n",
+    "# 문법 교정 문자열 선언 및 초기화\n",
+    "check_text = result_string\n",
+    "corrected_text = correct_text(check_text, grammar_checker_pipe, grammar_corrector_pipe)\n",
+    "# 문자열 출력 (입력 문자열, 문법 교정 문자열)\n",
+    "print(f\"input text: {check_text}\\n\")\n",
     "print(f'generated text: {corrected_text}')\n",
     "\n",
-    "# 문자열 바뀐 부분 확인\n",
-    "# pip install diff_match_patch\n",
+    "\n",
+    "## 문자열 바뀐 부분 확인\n",
     "from diff_match_patch import diff_match_patch\n",
     "\n",
-    "before = test_text\n",
+    "before = check_text\n",
     "after = corrected_text\n",
     "temp = \"\" \n",
-    "\n",
     "dmp = diff_match_patch()\n",
     "diff = dmp.diff_main(before, after)\n",
     "dmp.diff_cleanupSemantic(diff)\n",
     "\n",
+    "#  0: 수정된 부분이 없을때\n",
+    "#  1: 추가\n",
+    "# -1: 삭제\n",
     "for d in diff:\n",
     "    if d[0] == 1:\n",
     "        temp += (\"[+\\'\"+d[1]+\"\\']\")\n",
@@ -405,14 +358,6 @@
     "print()\n",
     "print(\"compare text: \", temp)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d1342051-c891-4af7-82b8-0ebd25d7e7a5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
