install 파일 추가, 강현 + 종현 코드병합

--- a/test.ipynb
+++ b/test.ipynb
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "e2b2c368-954c-4ae9-b489-d82f5006a3a1",
    "metadata": {},
    "outputs": [
@@ -189,35 +189,44 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-12-20 11:16:36.016978: I tensorflow/core/util/port.cc:111] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2023-12-20 11:16:36.018421: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2023-12-20 11:16:36.040264: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2023-12-20 11:16:36.040287: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2023-12-20 11:16:36.040303: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2023-12-20 11:16:36.044305: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2023-12-20 11:16:36.044621: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-12-20 11:16:36.710684: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:nncf:NNCF initialized successfully. Supported frameworks detected: torch, tensorflow, onnx, openvino\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
       "Compiling the model to AUTO ...\n",
-      "Setting OpenVINO CACHE_DIR to roberta-base-cola/model_cache\n",
+      "Setting OpenVINO CACHE_DIR to model/roberta-base-cola/model_cache\n",
       "Compiling the encoder to AUTO ...\n",
       "Compiling the decoder to AUTO ...\n",
       "Compiling the decoder to AUTO ...\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "## 모듈 임포트\n",
+    "from transformers import pipeline, AutoTokenizer\n",
+    "from optimum.intel.openvino import OVModelForSeq2SeqLM, OVModelForSequenceClassification\n",
+    "import re\n",
+    "import transformers\n",
+    "\n",
+    "\n",
+    "grammar_checker_model_id = \"textattack/roberta-base-CoLA\"\n",
+    "grammar_checker_dir = Path(\"model/roberta-base-cola\")\n",
+    "grammar_checker_tokenizer = AutoTokenizer.from_pretrained(grammar_checker_model_id)\n",
+    "grammar_checker_model = OVModelForSequenceClassification.from_pretrained(grammar_checker_dir, device='AUTO')\n",
+    "\n",
+    "grammar_checker_pipe = pipeline(\"text-classification\", model=grammar_checker_model, tokenizer=grammar_checker_tokenizer)\n",
+    "\n",
+    "\n",
+    "grammar_corrector_model_id = \"pszemraj/flan-t5-large-grammar-synthesis\"\n",
+    "grammar_corrector_dir = Path(\"model/flan-t5-large-grammar-synthesis\")\n",
+    "grammar_corrector_tokenizer = AutoTokenizer.from_pretrained(grammar_corrector_model_id)\n",
+    "grammar_corrector_model = OVModelForSeq2SeqLM.from_pretrained(grammar_corrector_dir, device='AUTO')\n",
+    "    \n",
+    "grammar_corrector_pipe = pipeline(\"text2text-generation\", model=grammar_corrector_model, tokenizer=grammar_corrector_tokenizer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d1342051-c891-4af7-82b8-0ebd25d7e7a5",
+   "metadata": {},
+   "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
@@ -231,37 +240,6 @@
     }
    ],
    "source": [
-    "## 모듈 임포트\n",
-    "from transformers import pipeline, AutoTokenizer\n",
-    "from optimum.intel.openvino import OVModelForSeq2SeqLM, OVModelForSequenceClassification\n",
-    "import re\n",
-    "import transformers\n",
-    "\n",
-    "\n",
-    "grammar_checker_model_id = \"textattack/roberta-base-CoLA\"\n",
-    "grammar_checker_dir = Path(\"roberta-base-cola\")\n",
-    "grammar_checker_tokenizer = AutoTokenizer.from_pretrained(grammar_checker_model_id)\n",
-    "\n",
-    "if grammar_checker_dir.exists():\n",
-    "    grammar_checker_model = OVModelForSequenceClassification.from_pretrained(grammar_checker_dir, device='AUTO')\n",
-    "else:\n",
-    "    grammar_checker_model = OVModelForSequenceClassification.from_pretrained(grammar_checker_model_id, export=True, device='AUTO')\n",
-    "    grammar_checker_model.save_pretrained(grammar_checker_dir)\n",
-    "\n",
-    "grammar_checker_pipe = pipeline(\"text-classification\", model=grammar_checker_model, tokenizer=grammar_checker_tokenizer)\n",
-    "\n",
-    "grammar_corrector_model_id = \"pszemraj/flan-t5-large-grammar-synthesis\"\n",
-    "grammar_corrector_dir = Path(\"flan-t5-large-grammar-synthesis\")\n",
-    "grammar_corrector_tokenizer = AutoTokenizer.from_pretrained(grammar_corrector_model_id)\n",
-    "\n",
-    "if grammar_corrector_dir.exists():\n",
-    "    grammar_corrector_model = OVModelForSeq2SeqLM.from_pretrained(grammar_corrector_dir, device='AUTO')\n",
-    "else:\n",
-    "    grammar_corrector_model = OVModelForSeq2SeqLM.from_pretrained(grammar_corrector_model_id, export=True, device='AUTO')\n",
-    "    grammar_corrector_model.save_pretrained(grammar_corrector_dir)\n",
-    "    \n",
-    "grammar_corrector_pipe = pipeline(\"text2text-generation\", model=grammar_corrector_model, tokenizer=grammar_corrector_tokenizer)\n",
-    "\n",
     "\n",
     "## 문자열 분할\n",
     "# text: 문장 배치로 분할할 텍스트, list: 문장 배치 목록\n",
@@ -355,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1342051-c891-4af7-82b8-0ebd25d7e7a5",
+   "id": "f7844f52-b387-4681-b3d4-303689412e1b",
    "metadata": {},
    "outputs": [],
    "source": []
