--- a/main.ipynb
+++ b/main.ipynb
@@ -5,7 +5,30 @@
    "execution_count": 1,
    "id": "04ac3628-b3de-4bd4-83a2-dad9762ec125",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-12-20 13:06:06.496951: I tensorflow/core/util/port.cc:111] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2023-12-20 13:06:06.498532: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-12-20 13:06:06.519550: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2023-12-20 13:06:06.519569: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2023-12-20 13:06:06.519586: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2023-12-20 13:06:06.523572: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-12-20 13:06:06.523877: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-12-20 13:06:07.001296: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:nncf:NNCF initialized successfully. Supported frameworks detected: torch, tensorflow, onnx, openvino\n"
+     ]
+    }
+   ],
    "source": [
     "from pathlib import Path\n",
     "import PyQt5\n",
@@ -15,7 +38,12 @@
     "import openvino as ov\n",
     "from IPython.display import Markdown, display\n",
     "from PIL import Image\n",
-    "from notebook_utils import load_image"
+    "# from notebook_utils import load_image\n",
+    "\n",
+    "from transformers import pipeline, AutoTokenizer\n",
+    "from optimum.intel.openvino import OVModelForSeq2SeqLM, OVModelForSequenceClassification\n",
+    "import re\n",
+    "import transformers"
    ]
   },
   {
@@ -45,7 +73,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f0ab5dba980>"
+       "<matplotlib.image.AxesImage at 0x7f92b3823c70>"
       ]
      },
      "execution_count": 3,
@@ -213,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "c720d4bc-8ba2-4b87-aa42-895756fef387",
    "metadata": {},
    "outputs": [
@@ -253,19 +281,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "6435d3a1-fc22-455f-94cf-e35973ab3c8d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Compiling the model to AUTO ...\n",
+      "Setting OpenVINO CACHE_DIR to model/roberta-base-cola/model_cache\n",
+      "Compiling the encoder to AUTO ...\n",
+      "Compiling the decoder to AUTO ...\n",
+      "Compiling the decoder to AUTO ...\n"
+     ]
+    }
+   ],
+   "source": [
+    "grammar_checker_model_id = \"textattack/roberta-base-CoLA\"\n",
+    "grammar_checker_dir = Path(\"model/roberta-base-cola\")\n",
+    "grammar_checker_tokenizer = AutoTokenizer.from_pretrained(grammar_checker_model_id)\n",
+    "grammar_checker_model = OVModelForSequenceClassification.from_pretrained(grammar_checker_dir, device='AUTO')\n",
+    "\n",
+    "grammar_checker_pipe = pipeline(\"text-classification\", model=grammar_checker_model, tokenizer=grammar_checker_tokenizer)\n",
+    "\n",
+    "\n",
+    "grammar_corrector_model_id = \"pszemraj/flan-t5-large-grammar-synthesis\"\n",
+    "grammar_corrector_dir = Path(\"model/flan-t5-large-grammar-synthesis\")\n",
+    "grammar_corrector_tokenizer = AutoTokenizer.from_pretrained(grammar_corrector_model_id)\n",
+    "grammar_corrector_model = OVModelForSeq2SeqLM.from_pretrained(grammar_corrector_dir, device='AUTO')\n",
+    "    \n",
+    "grammar_corrector_pipe = pipeline(\"text2text-generation\", model=grammar_corrector_model, tokenizer=grammar_corrector_tokenizer)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "1e4d11a7-e7ee-4443-8bd1-4c5da93c357b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input text: dear did my you friend it is know my friends that that is more i house go to bigger her see house in you than later england at sunday my house best ken gwon\n",
+      "\n",
+      "generated text: Do you know my friend that it is more important to go to her house in London than to go to my house in Beijing on a Sunday?\n",
+      "\n",
+      "compare text:  [-'dear did my you friend it is'][+'Do you'] know my friend[-'s'] that [-'tha'][+'i']t is more i[-' house go to bigger her see house in you than later england at sunday my house best ken gwon'][+'mportant to go to her house in London than to go to my house in Beijing on a Sunday?']\n"
+     ]
+    }
+   ],
+   "source": [
+    "## 문자열 분할\n",
+    "# text: 문장 배치로 분할할 텍스트, list: 문장 배치 목록\n",
+    "def split_text(text: str) -> list:\n",
+    "   \n",
+    "    # 정규식을 사용하여 텍스트를 문장으로 분할\n",
+    "    sentences = re.split(r\"(?<=[^A-Z].[.?]) +(?=[A-Z])\", text)\n",
+    "    # 문장 배치\n",
+    "    sentence_batches = []\n",
+    "    # 임시 문장 배치 저장\n",
+    "    temp_batch = []\n",
+    "\n",
+    "    for sentence in sentences:\n",
+    "        # 임시 문장 배치 추가\n",
+    "        temp_batch.append(sentence)\n",
+    "\n",
+    "        # 임시 문장 2~3문장 사이 OR 마지막 배치인 경우\n",
+    "        if len(temp_batch) >= 2 and len(temp_batch) <= 3 or sentence == sentences[-1]:\n",
+    "            # 문장 배치 추가\n",
+    "            sentence_batches.append(temp_batch)\n",
+    "            temp_batch = []\n",
+    "\n",
+    "    return sentence_batches\n",
+    "\n",
+    "\n",
+    "## 문자열 문법 수정\n",
+    "# text: 수정할 텍스트, checker: 텍스트의 문법 품질 확인 파이프라인, corrector: 텍스트 수정 파이프라인, separator: 수정된 텍스트를 단일 문자열로 결합할때 사용할 구분기호(기본값은 공백문자)\n",
+    "def correct_text(text: str, checker: transformers.pipelines.Pipeline, corrector: transformers.pipelines.Pipeline, separator: str = \" \") -> str:\n",
+    "    \n",
+    "    # 문장 배치로 분할된 텍스트\n",
+    "    sentence_batches = split_text(text)\n",
+    "    \n",
+    "    # 수정된 텍스트\n",
+    "    corrected_text = []\n",
+    "\n",
+    "    # 문장 반복 및 진행도 출력\n",
+    "    for batch in sentence_batches:\n",
+    "        # 배치 문장을 단일 문자열로 결합\n",
+    "        raw_text = \" \".join(batch)\n",
+    "\n",
+    "        # 텍스트 분류 파이프라인 사용 -> 텍스트 문법 품질 확인(label, score)\n",
+    "        results = checker(raw_text)\n",
+    "        \n",
+    "        # 텍스트 분류 결과가 LABEL_1이 아니거나 점수가 0.9 미만인 LABEL_1인 경우일때\n",
+    "        if results[0][\"label\"] != \"LABEL_1\" or (\n",
+    "            results[0][\"label\"] == \"LABEL_1\" and results[0][\"score\"] < 0.9\n",
+    "        ):\n",
+    "            # 텍스트 생성 파이프라인 사용하여 텍스트 수정\n",
+    "            corrected_batch = corrector(raw_text)\n",
+    "            corrected_text.append(corrected_batch[0][\"generated_text\"])\n",
+    "        else:\n",
+    "            corrected_text.append(raw_text)\n",
+    "\n",
+    "    # 수정된 텍스트를 단일 문자열로 결합\n",
+    "    corrected_text = separator.join(corrected_text)\n",
+    "    return corrected_text\n",
+    "\n",
+    "# 문법 교정 문자열 선언 및 초기화\n",
+    "check_text = result_string\n",
+    "corrected_text = correct_text(check_text, grammar_checker_pipe, grammar_corrector_pipe)\n",
+    "# 문자열 출력 (입력 문자열, 문법 교정 문자열)\n",
+    "print(f\"input text: {check_text}\\n\")\n",
+    "print(f'generated text: {corrected_text}')\n",
+    "\n",
+    "\n",
+    "## 문자열 바뀐 부분 확인\n",
+    "from diff_match_patch import diff_match_patch\n",
+    "\n",
+    "before = check_text\n",
+    "after = corrected_text\n",
+    "temp = \"\" \n",
+    "dmp = diff_match_patch()\n",
+    "diff = dmp.diff_main(before, after)\n",
+    "dmp.diff_cleanupSemantic(diff)\n",
+    "\n",
+    "#  0: 수정된 부분이 없을때\n",
+    "#  1: 추가\n",
+    "# -1: 삭제\n",
+    "for d in diff:\n",
+    "    if d[0] == 1:\n",
+    "        temp += (\"[+\\'\"+d[1]+\"\\']\")\n",
+    "    elif d[0] == 0:\n",
+    "        temp += (d[1])\n",
+    "    elif d[0] == -1:\n",
+    "        temp += (\"[-\\'\"+d[1]+\"\\']\")\n",
+    "\n",
+    "print()\n",
+    "print(\"compare text: \", temp)"
+   ]
   },
   {
    "cell_type": "code",
