add output folder

--- a/install.ipynb
+++ b/install.ipynb
@@ -257,20 +257,20 @@
      "output_type": "stream",
      "text": [
       "========== Converting text-recognition-resnet-fc to ONNX\n",
-      "Conversion to ONNX command: /home/kengwon/openvino/.openvino_env/bin/python3 -- /home/kengwon/openvino/.openvino_env/lib/python3.10/site-packages/openvino/model_zoo/internal_scripts/pytorch_to_onnx.py --model-path=/home/kengwon/openvino/.openvino_env/lib/python3.10/site-packages/openvino/model_zoo/models/public/text-recognition-resnet-fc --model-path=model/public/text-recognition-resnet-fc --model-name=get_model --import-module=model '--model-param=file_config=r\"model/public/text-recognition-resnet-fc/vedastr/configs/resnet_fc.py\"' '--model-param=weights=r\"model/public/text-recognition-resnet-fc/vedastr/ckpt/resnet_fc.pth\"' --input-shape=1,1,32,100 --input-names=input --output-names=output --output-file=model/public/text-recognition-resnet-fc/resnet_fc.onnx\n",
+      "Conversion to ONNX command: /home/hong/openvino/.openvino_env/bin/python3 -- /home/hong/openvino/.openvino_env/lib/python3.10/site-packages/openvino/model_zoo/internal_scripts/pytorch_to_onnx.py --model-path=/home/hong/openvino/.openvino_env/lib/python3.10/site-packages/openvino/model_zoo/models/public/text-recognition-resnet-fc --model-path=model/public/text-recognition-resnet-fc --model-name=get_model --import-module=model '--model-param=file_config=r\"model/public/text-recognition-resnet-fc/vedastr/configs/resnet_fc.py\"' '--model-param=weights=r\"model/public/text-recognition-resnet-fc/vedastr/ckpt/resnet_fc.pth\"' --input-shape=1,1,32,100 --input-names=input --output-names=output --output-file=model/public/text-recognition-resnet-fc/resnet_fc.onnx\n",
       "\n",
       "ONNX check passed successfully.\n",
       "\n",
       "========== Converting text-recognition-resnet-fc to IR (FP16)\n",
-      "Conversion command: /home/kengwon/openvino/.openvino_env/bin/python3 -- /home/kengwon/openvino/.openvino_env/bin/mo --framework=onnx --output_dir=model/public/text-recognition-resnet-fc/FP16 --model_name=text-recognition-resnet-fc --input=input '--mean_values=input[127.5]' '--scale_values=input[127.5]' --output=output --input_model=model/public/text-recognition-resnet-fc/resnet_fc.onnx '--layout=input(NCHW)' '--input_shape=[1, 1, 32, 100]' --compress_to_fp16=True\n",
+      "Conversion command: /home/hong/openvino/.openvino_env/bin/python3 -- /home/hong/openvino/.openvino_env/bin/mo --framework=onnx --output_dir=model/public/text-recognition-resnet-fc/FP16 --model_name=text-recognition-resnet-fc --input=input '--mean_values=input[127.5]' '--scale_values=input[127.5]' --output=output --input_model=model/public/text-recognition-resnet-fc/resnet_fc.onnx '--layout=input(NCHW)' '--input_shape=[1, 1, 32, 100]' --compress_to_fp16=True\n",
       "\n",
       "[ INFO ] Generated IR will be compressed to FP16. If you get lower accuracy, please consider disabling compression explicitly by adding argument --compress_to_fp16=False.\n",
       "Find more information about compression to FP16 at https://docs.openvino.ai/2023.0/openvino_docs_MO_DG_FP16_Compression.html\n",
       "[ INFO ] The model was converted to IR v11, the latest model format that corresponds to the source DL framework input/output format. While IR v11 is backwards compatible with OpenVINO Inference Engine API v1.0, please use API v2.0 (as of 2022.1) to take advantage of the latest improvements in IR v11.\n",
       "Find more information about API v2.0 and IR v11 at https://docs.openvino.ai/2023.0/openvino_2_0_transition_guide.html\n",
       "[ SUCCESS ] Generated IR version 11 model.\n",
-      "[ SUCCESS ] XML file: /home/kengwon/ken/penpal_miniproj/model/public/text-recognition-resnet-fc/FP16/text-recognition-resnet-fc.xml\n",
-      "[ SUCCESS ] BIN file: /home/kengwon/ken/penpal_miniproj/model/public/text-recognition-resnet-fc/FP16/text-recognition-resnet-fc.bin\n",
+      "[ SUCCESS ] XML file: /home/hong/mini_pjt_1219/OpenVINO_mini_project/model/public/text-recognition-resnet-fc/FP16/text-recognition-resnet-fc.xml\n",
+      "[ SUCCESS ] BIN file: /home/hong/mini_pjt_1219/OpenVINO_mini_project/model/public/text-recognition-resnet-fc/FP16/text-recognition-resnet-fc.bin\n",
       "\n"
      ]
     }
@@ -300,15 +300,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-12-20 12:02:13.168994: I tensorflow/core/util/port.cc:111] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2023-12-20 12:02:13.192825: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2023-12-20 12:02:13.223923: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2023-12-20 12:02:13.223944: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2023-12-20 12:02:13.223967: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2023-12-20 12:02:13.231334: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2023-12-20 12:02:13.231918: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2023-12-20 13:46:28.252905: I tensorflow/core/util/port.cc:111] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2023-12-20 13:46:28.275476: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-12-20 13:46:28.307236: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2023-12-20 13:46:28.307267: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2023-12-20 13:46:28.307292: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2023-12-20 13:46:28.317277: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-12-20 13:46:28.317659: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-12-20 12:02:13.928190: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2023-12-20 13:46:28.876163: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     },
     {
@@ -322,8 +322,32 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "Framework not specified. Using pt to export to ONNX.\n",
+      "Some weights of the model checkpoint at textattack/roberta-base-CoLA were not used when initializing RobertaForSequenceClassification: ['roberta.pooler.dense.bias', 'roberta.pooler.dense.weight']\n",
+      "- This IS expected if you are initializing RobertaForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing RobertaForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "Using the export variant default. Available variants are:\n",
+      "    - default: The default ONNX variant.\n",
+      "Using framework PyTorch: 2.1.0+cpu\n",
+      "Overriding 1 configuration item(s)\n",
+      "\t- use_cache -> False\n",
       "Compiling the model to AUTO ...\n",
-      "Setting OpenVINO CACHE_DIR to model/roberta-base-cola/model_cache\n",
+      "Framework not specified. Using pt to export to ONNX.\n",
+      "Using the export variant default. Available variants are:\n",
+      "    - default: The default ONNX variant.\n",
+      "Using framework PyTorch: 2.1.0+cpu\n",
+      "Overriding 1 configuration item(s)\n",
+      "\t- use_cache -> False\n",
+      "Using framework PyTorch: 2.1.0+cpu\n",
+      "Overriding 1 configuration item(s)\n",
+      "\t- use_cache -> True\n",
+      "/home/hong/openvino/.openvino_env/lib/python3.10/site-packages/transformers/modeling_utils.py:873: TracerWarning: Converting a tensor to a Python boolean might cause the trace to be incorrect. We can't record the data flow of Python values, so this value will be treated as a constant in the future. This means that the trace might not generalize to other inputs!\n",
+      "  if causal_mask.shape[1] < attention_mask.shape[1]:\n",
+      "Using framework PyTorch: 2.1.0+cpu\n",
+      "Overriding 1 configuration item(s)\n",
+      "\t- use_cache -> True\n",
+      "/home/hong/openvino/.openvino_env/lib/python3.10/site-packages/transformers/models/t5/modeling_t5.py:508: TracerWarning: Converting a tensor to a Python boolean might cause the trace to be incorrect. We can't record the data flow of Python values, so this value will be treated as a constant in the future. This means that the trace might not generalize to other inputs!\n",
+      "  elif past_key_value.shape[2] != key_value_states.shape[1]:\n",
       "Compiling the encoder to AUTO ...\n",
       "Compiling the decoder to AUTO ...\n",
       "Compiling the decoder to AUTO ...\n"
